fixed some issues on mac and added depth to learning_agent.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-/autograder.pyc
-/game.pyc
-/ghostAgents.pyc
-/grading.pyc
-/graphicsDisplay.pyc
-/graphicsUtils.pyc
-/keyboardAgents.pyc
-/layout.pyc
-/multiAgents.pyc
-/multiagentTestClasses.pyc
-/pacman.pyc
-/projectParams.pyc
-/testClasses.pyc
-/testParser.pyc
-/textDisplay.pyc
-/util.pyc
+.DS_Store
+.idea/*
+__pycache__/
+*.pyc
+/.project
+/.pydevproject
